<?xml version="1.0" encoding="utf-8"?>

<!-- TODO 20-05-2021 21:57 Is there a better way to add a margin to all children but one besides
      explicitly adding it to each one? -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_task_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/new_task_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_task_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="12dp"
        android:text="@string/new_task_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_toolbar" />

    <EditText
        android:id="@+id/new_task_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="36dp"
        android:background="@null"
        android:imeOptions="actionSend|flagNoEnterAction"
        android:inputType="text|textCapSentences|textAutoComplete"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_message" />

    <View
        android:id="@+id/divider_0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/new_task_field" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/group_name"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:gravity="center_vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/light_gray"
        app:iconPadding="12dp"
        app:iconTint="@color/light_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_0"
        app:rippleColor="@color/light_gray" />

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/group_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/due_at"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:gravity="center_vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/new_task_do_at_today"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/light_gray"
        app:icon="@drawable/ic_calendar"
        app:iconPadding="12dp"
        app:iconTint="@color/light_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        app:rippleColor="@color/light_gray" />

    <View
        android:id="@+id/divider_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/due_at" />

    <ImageButton
        android:id="@+id/new_task_create"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:src="@drawable/ic_add"
        android:transitionName="@string/task_create_transition_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>